Kubernetes/__Network Policies/files/4_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srv1-network-policy
spec:
  podSelector:
    matchLabels:
      app: srv1
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srv2-network-policy
spec:
  podSelector:
    matchLabels:
      app: srv2
  policyTypes:
  - Ingress
  ingress: []
